--- a/app/views/layouts/_registration_navbar.html.erb
+++ b/app/views/layouts/_registration_navbar.html.erb
@@ -9,7 +9,7 @@
           <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
         </li> -->
         <li class="nav-item"> 
-          <strong> <%= link_to "Home", "http://online.bstcollege.edu.et/", class: "nav-link"%>  </strong>
+          <strong> <%= link_to "Home", "http://sis.yic.edu.et/", class: "nav-link"%>  </strong>
         </li>
         <li class="nav-item d-none d-sm-inline-block"> 
           <%if current_page?(new_student_registration_path)%>
