--- a/app/views/pages/requirement.erb
+++ b/app/views/pages/requirement.erb
@@ -16,7 +16,7 @@
 		letter-spacing: .03125em!important;
 		line-height: 1.5rem;
 	}
-	li{
+	.checklist li{
 		font-size: 20px;
 		/*letter-spacing: .03125em!important;*/
 		line-height: 2rem;
@@ -47,7 +47,7 @@
 					<p style="font-size: 20px;"><strong>Dear Student,</strong></p>
 
 					<p class="text-muted">I understand that it is my responsibility to have a computer with a webcam, stable internet connection, sufficient technical ability to navigate through the system and accomplish my duties. I take full responsibility and agree this conditions as I proceed.</p>
-					<ol>
+					<ol class="checklist">
 						<li>Good knowledge on how to use digital devices and the internet.</li>
 						<li>Good internet connection at least once a week.</li>
 						<li>A laptop with Webcam.</li>
