--- a/app/views/semester_registrations/edit.html.erb
+++ b/app/views/semester_registrations/edit.html.erb
@@ -94,6 +94,120 @@
           </div>
         </div>
       </div>
+      <div class="col-12">
+      	<!-- <p class="lead">Amount Due 2/22/2014</p> -->
+      	<div class="row">
+      		<div class="col-12 col-md-3">
+      			<div class="card card-primary">
+	          <div class="card-header">
+	            <h3 class="card-title">Select payment Mode</h3>
+	          </div>
+	          <div class="card-body">
+	          	<div class="table-responsive">
+			      		<table class="table">
+			      			<tbody>
+				      			<tr>
+				      				<th style="width:50%">Montly Subtotal:</th>
+				      				<td><%= @semester_registration.student.program.monthly_price%> ETB</td>
+				      			</tr>
+				      			<tr>
+				      				<th>Registration Fee:</th>
+				      				<td>550 ETB</td>
+				      			</tr>
+				      			<tr>
+				      				<th>Total:</th>
+				      				<td><b><%= @semester_registration.student.program.monthly_price + 550%> ETB</b></td>
+				      			</tr>
+			      			</tbody>
+			      		</table>
+			      	</div>
+	          </div>
+        	</div>
+      		</div>
+      		<div class="col-12 col-md-3">
+      			<div class="card card-primary">
+	          <div class="card-header">
+	            <h3 class="card-title">Select payment Mode</h3>
+	          </div>
+	          <div class="card-body">
+	          	<div class="table-responsive">
+			      		<table class="table">
+			      			<tbody>
+				      			<tr>
+				      				<th style="width:50%">Two Month Subtotal:</th>
+				      				<td><%= @semester_registration.student.program.monthly_price%> ETB</td>
+				      			</tr>
+				      			<tr>
+				      				<th>Registration Fee:</th>
+				      				<td>550 ETB</td>
+				      			</tr>
+				      			<tr>
+				      				<th>Total:</th>
+				      				<td><b><%= @semester_registration.student.program.monthly_price + 550%> ETB</b></td>
+				      			</tr>
+			      			</tbody>
+			      		</table>
+			      	</div>
+	          </div>
+        	</div>
+      		</div>
+      		<div class="col-12 col-md-3">
+      			<div class="card card-primary">
+	          <div class="card-header">
+	            <h3 class="card-title">Select payment Mode</h3>
+	          </div>
+	          <div class="card-body">
+	          	<div class="table-responsive">
+			      		<table class="table">
+			      			<tbody>
+				      			<tr>
+				      				<th style="width:50%">Three Month Subtotal:</th>
+				      				<td><%= @semester_registration.student.program.three_monthly_price%> ETB</td>
+				      			</tr>
+				      			<tr>
+				      				<th>Registration Fee:</th>
+				      				<td>550 ETB</td>
+				      			</tr>
+				      			<tr>
+				      				<th>Total:</th>
+				      				<td><b><%= @semester_registration.student.program.three_monthly_price + 550%> ETB</b></td>
+				      			</tr>
+			      			</tbody>
+			      		</table>
+			      	</div>
+	          </div>
+        	</div>
+      		</div>
+      		<div class="col-12 col-md-3">
+      			<div class="card card-primary">
+	          <div class="card-header">
+	            <h3 class="card-title">Select payment Mode</h3>
+	          </div>
+	          <div class="card-body">
+	          	<div class="table-responsive">
+			      		<table class="table">
+			      			<tbody>
+				      			<tr>
+				      				<th style="width:50%">Full Subtotal:</th>
+				      				<td><%= @semester_registration.student.program.full_semester_price%> ETB</td>
+				      			</tr>
+				      			<tr>
+				      				<th>Registration Fee:</th>
+				      				<td>550 ETB</td>
+				      			</tr>
+				      			<tr>
+				      				<th>Total:</th>
+				      				<td><b><%= @semester_registration.student.program.full_semester_price + 550%> ETB</b></td>
+				      			</tr>
+			      			</tbody>
+			      		</table>
+			      	</div>
+	          </div>
+        	</div>
+      		</div>
+      	</div>
+      	
+      </div>
       <div class="col-12 col-md-12">
         <div class="card card-primary">
           <div class="card-header">
