--- a/app/views/pages/_instruction.html.erb
+++ b/app/views/pages/_instruction.html.erb
@@ -166,7 +166,7 @@
             
           </div>
           <div class="card-footer">
-            <%= link_to "Go to Learning Platfrom", "https://lms.bstcollege.edu.et", class: "btn btn-success"%>
+            <%= link_to "Go to Learning Platfrom", "https://lms.yic.edu.et", class: "btn btn-success"%>
           </div>
         </div>
       </div>
