--- a/app/views/students/registrations/_document.html.erb
+++ b/app/views/students/registrations/_document.html.erb
@@ -5,6 +5,6 @@
 </div>
 <div class="row">
 	<div class="col-12 col-md-12 form-group">
-	  <strong> <%= f.input :tempo_status, label: "If i attache a temporary file Its my responsiblity to bring my original degree within four months since the day of my registration. I accept the terms and condition of BST and understand that i will not recive any grade report or offical documentation from BST." %></strong>
+	  <strong> <%= f.input :tempo_status, label: "If i attache a temporary file Its my responsiblity to bring my original degree within four months since the day of my registration. I accept the terms and condition of YIC and understand that i will not recive any grade report or offical documentation from YIC." %></strong>
 	</div>
 </div>
