--- a/app/views/pages/_instruction.html.erb
+++ b/app/views/pages/_instruction.html.erb
@@ -20,7 +20,7 @@
         <!-- /.card-header -->
         <div class="card-body">  
           <p class="text-center">
-            <strong class="text-blue">Your account has not been approved yet. Wait until the registrar approves your account. Until then update your informations and documents.</strong>
+            <strong class="text-blue">Your account has not been approved yet. Wait until the registrar approves your account. Until then you can update your informations and documents.</strong>
           </p>
         </div>
         <!-- /.card-body -->
