--- a/app/views/students/registrations/_basic.html.erb
+++ b/app/views/students/registrations/_basic.html.erb
@@ -54,6 +54,7 @@
     </div>
     <div class="col-12 col-md-6 form-group">
       <%= f.input :password, input_html: { class: 'form-control', autocomplete: "password" },placeholder: "Password", required: true %>
+      <%= f.hint "must be between 5 to 20 characters which contain at least one lowercase letter, one uppercase letter, one numeric digit, and one special character"%>
     </div>
     <div class="col-12 col-md-6 form-group">
       <%= f.input :password_confirmation, input_html: { class: 'form-control', autocomplete: "password_confirmation" },placeholder: "Password confirmation", required: true %>
