--- a/app/views/students/registrations/_emergency.html.erb
+++ b/app/views/students/registrations/_emergency.html.erb
@@ -1,27 +1,31 @@
 <%= f.fields_for :emergency_contact  do |a|%>
   <div class="row">
     <div class="col-12 col-md-6 form-group">
-      <%= a.input :full_name, input_html: { class: 'form-control', autocomplete: "full_name"  },placeholder: "Full name", required: true %>
+      <%= a.input :full_name, input_html: { class: 'form-control', autocomplete: "full_name"  },placeholder: "Full name", required: true, label: "Contact Person Fullname" %>
     </div>
     <div class="col-12 col-md-6 form-group">
-      <%= a.input :relationship, as: :select, :collection => ["Husband", "Wife", "Father", "Mother", "Legal guardian","Son","Daughter","Brother","Sister", "Friend","Uncle","Aunt","Cousin","Nephew","Niece","Grandparent"], input_html: {class: "form-control custom-select"}, required: true%>
+      <%= a.input :relationship, as: :select, :collection => ["Husband", "Wife", "Father", "Mother", "Legal guardian","Son","Daughter","Brother","Sister", "Friend","Uncle","Aunt","Cousin","Nephew","Niece","Grandparent"], input_html: {class: "form-control custom-select"}, required: true, label: "Contact Person Relationship" %>
     </div>
     <div class="col-12 col-md-6 form-group">
-      <%= a.input :cell_phone, input_html: { class: 'form-control', 'data-inputmask'=>'"mask": "(+251) 999-999999"' },placeholder: "Cell Phone", required: true %>
+      <%= a.input :cell_phone, input_html: { class: 'form-control', 'data-inputmask'=>'"mask": "(+251) 999-999999"' },placeholder: "Cell Phone", required: true, label: "Contact Person PhoneNumber"  %>
     </div>
     
     
     <div class="col-12 col-md-6 form-group">
-      <%= a.input :current_occupation, input_html: { class: 'form-control', autocomplete: "current_occupation" },placeholder: "Current occupation", required: true%>
+      <%= a.input :current_occupation, input_html: { class: 'form-control', autocomplete: "current_occupation" },placeholder: "Current occupation", label: "Contact Person Current Occupation" %>
+
     </div>
     <div class="col-12 col-md-6 form-group">
-      <%= a.input :name_of_current_employer, input_html: { class: 'form-control', autocomplete: "name_of_current_employer" },placeholder: "Name of current employer", required: true%>
+      <%= a.input :name_of_current_employer, input_html: { class: 'form-control', autocomplete: "name_of_current_employer" },placeholder: "Name of current employer", required: true %>
+      <%= f.hint "Contact person current employer name"%>
     </div>
     <div class="col-12 col-md-6 form-group">
       <%= a.input :email_of_employer, input_html: { class: 'form-control', autocomplete: "email_of_employer" },placeholder: "Email of employer"%>
+      <%= f.hint "Contact person current employer email"%>
     </div>
     <div class="col-12 col-md-6 form-group">
-      <%= a.input :office_phone_number, input_html: { class: 'form-control', 'data-inputmask'=>'"mask": "(+251) 999-999999"' },placeholder: "office phone number", required: true%>
+      <%= a.input :office_phone_number, input_html: { class: 'form-control', 'data-inputmask'=>'"mask": "(+251) 999-999999"' },placeholder: "office phone number", required: true, label: "Employer Phone Number"%>
+      <%= f.hint "Contact person current employer phone number"%>
     </div>
     <div class="col-12 col-md-6 form-group">
       <%= a.input :pobox, input_html: { class: 'form-control', autocomplete: "pobox" },placeholder: "Pobox" %>
