--- a/app/views/students/registrations/_address.html.erb
+++ b/app/views/students/registrations/_address.html.erb
@@ -7,11 +7,12 @@
       <%= a.input :city, input_html: { class: 'form-control', autofocus: true, autocomplete: "city" },placeholder: "City", required: true, error: 'city is mandatory, please specify one' %>
     </div>
     
-    <div class="col-12 col-md-6 form-group">
-      <%= a.input :region, input_html: { class: 'form-control' },placeholder: "Region"%>
-    </div>
+    
     <div class="col-12 col-md-6 form-group">
       <%= a.input :sub_city, input_html: { class: 'form-control', autocomplete: "sub_city" },placeholder: "Sub city"%>
+    </div>
+    <div class="col-12 col-md-6 form-group">
+      <%= a.input :region, as: :select, :collection => ["Addis Ababa", "Afar", "Amahara","Benishangul Gumuz","Dire Dawa","Gambela","Harari","Oromia","Somali","Tigray","Sidama","Southern Nations Nationalities and People"], input_html: { class: 'form-control' },placeholder: "Region", required: true%>
     </div>
     <div class="col-12 col-md-6 form-group">
       <%= a.input :zone, input_html: { class: 'form-control', autocomplete: "zone" },placeholder: "Zone"%>
@@ -30,7 +31,7 @@
     </div>
     <div class="col-12 col-md-6 form-group">
       <%= f.input :current_location, input_html: { class: 'form-control', autocomplete: "current_location"},placeholder: "Current Location"%>
-      <%= f.hint "when you pick your birth date select GC"%>
+      <%= f.hint "current residence"%>
     </div>
   </div>
 <%end%>
