--- a/app/views/students/registrations/new.html.erb
+++ b/app/views/students/registrations/new.html.erb
@@ -213,7 +213,7 @@
                             <div class="card-header">
                               <h3 class="card-title">
                                 <i class="fas fa-info-circle mr-2"></i>
-                                <strong>Emergency Address</strong>
+                                <strong>Emergency Contact Person Information</strong>
                               </h3>
                             </div>
                             <div class="card-body">
