--- a/app/views/pages/profile.erb
+++ b/app/views/pages/profile.erb
@@ -33,7 +33,7 @@
             <h1 class="profile-username text-center"><b><%= current_student.name.full.upcase%></b></h1>
 
 
-            <% if current_student.document_verification_status == "approved"%>
+            <% if !current_student.document_verification_status == "approved"%>
                 <%= link_to "Edit Profile", edit_student_registration_path, class: "btn btn-outline-primary btn-flat"%>
               <%end%>
             <ul class="list-group list-group-unbordered mb-3">
