--- a/app/assets/stylesheets/active_admin.css.scss
+++ b/app/assets/stylesheets/active_admin.css.scss
@@ -24,10 +24,56 @@ $skinMainFirstColor: #024d71!default;
 $skinMainSecondColor: #ffc107!default;
 $menu-arrow-dark-icon-url: 'active_admin/nested_menu_arrow_dark.gif' !default;
 @import "wigu/active_admin_theme";
+body{
+  font-size: 0.75em !important;
+}
+#wrapper .sidebar_section.panel > h3{
+  color: #036899 !important;
+  font-weight: bold;
+}
+.action_item a{
+  color: #036899 !important;
+  font-weight: bold !important;
+}
+
+
+
+ .pending .table_tools_button{
+  background: #036899 !important; 
+  color: #fff !important;
+}
+.pending .table_tools_button > span{color: #fff !important;}
+.approved .table_tools_button{
+  background: #8daa92 !important; 
+  color: #fff !important;
+}
+.approved .table_tools_button > span{color: #fff !important;}
+
+.denied .table_tools_button{
+  background: #d45f53 !important; 
+  color: #fff !important;
+}
+.denied .table_tools_button > span{color: #fff !important;}
+
+.incomplete .table_tools_button{
+  background: #e29b20 !important; 
+  color: #fff !important;
+}
+.incomplete .table_tools_button > span{color: #fff !important;}
+
+.scope{
+  margin-right: 5px !important;
+  margin-bottom: 5px !important;
+}
+
 .table_tools_button{color: #036899 !important;
-font-size: 1.2em !important;}
+font-size: 1.1em !important;}
 .table_tools_button span{color: #036899 !important;
-  font-size: 1.2em !important;}
+  font-size: 1.1em !important;}
+.current a{
+  color: #036899 !important;
+  font-weight: bold;
+}
 .video-responsive iframe{
   width: 500px;
   height: 300px !important;
