--- a/app/views/pages/_student_id.html.erb
+++ b/app/views/pages/_student_id.html.erb
@@ -17,7 +17,7 @@
 		                <b>Password</b> <a class="text-muted float-right"><%= current_student.student_password.present? ? current_student.student_password : "Not Assigned Yet"%></a>
 		              </li>
 		            </ul>
-                <%= link_to "Go to Learning Platfrom", "https://lms.bstcollege.edu.et", class: "btn btn-primary"%>
+                <%= link_to "Go to Learning Platfrom", "https://lms.yic.edu.et", class: "btn btn-primary"%>
 	          	</div>
           	</div>
           </div>
