--- a/app/views/students/registrations/_document.html.erb
+++ b/app/views/students/registrations/_document.html.erb
@@ -5,6 +5,10 @@
 </div>
 <div class="row">
 	<div class="col-12 col-md-12 form-group">
-	  <strong> <%= f.input :tempo_status, label: "If i attache a temporary file Its my responsiblity to bring my original degree within four months since the day of my registration. I accept the terms and condition of YIC and understand that i will not recive any grade report or offical documentation from YIC." %></strong>
+	  <strong> <%= f.input :tempo_status, as: :boolean, label: "Please check this box if you are applying with a temporary degree certificate. Its my responsiblity to bring my original degree within four months since the day of my registration. I accept the terms and condition of YIC and understand that i will not recive any grade report or offical documentation from YIC." %></strong>
 	</div>
+	<!-- <div class="col-12 col-md-12 form-group">
+	  <input id="checkbox1" type="checkbox" class="form-check-input" id="exampleCheck1">
+		<label class="form-check-label text-muted" for="exampleCheck1">By proceeding, I agree that all the attached documents are mine and authentic.</label>
+	</div> -->
 </div>
