--- a/app/views/layouts/_registration_navbar.html.erb
+++ b/app/views/layouts/_registration_navbar.html.erb
@@ -1,6 +1,6 @@
 <nav class="main-header navbar navbar-expand navbar-white navbar-light">
   <div class="container-fluid"> 
-    <%= link_to image_tag("logo.png", size: "142.203x55", alt: "logo"), root_path, class: "navbar-brand"%>
+    <%= link_to image_tag("logo.png", size: "142.203x55", alt: "logo"), requirements_path, class: "navbar-brand"%>
     
     <!-- right navbar links -->
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -9,7 +9,7 @@
           <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
         </li> -->
         <li class="nav-item"> 
-          <strong> <%= link_to "Home", "http://sis.yic.edu.et/", class: "nav-link"%>  </strong>
+          <strong> <%= link_to "Home", requirements_path, class: "nav-link"%>  </strong>
         </li>
         <li class="nav-item d-none d-sm-inline-block"> 
           <%if current_page?(new_student_registration_path)%>
