--- a/app/views/semester_registrations/edit.html.erb
+++ b/app/views/semester_registrations/edit.html.erb
@@ -100,7 +100,7 @@
       		<div class="col-12 col-md-3">
       			<div class="card card-primary">
 	          <div class="card-header">
-	            <h3 class="card-title">Select payment Mode</h3>
+	            <h3 class="card-title">Montly Prcing Option</h3>
 	          </div>
 	          <div class="card-body">
 	          	<div class="table-responsive">
@@ -127,7 +127,7 @@
       		<div class="col-12 col-md-3">
       			<div class="card card-primary">
 	          <div class="card-header">
-	            <h3 class="card-title">Select payment Mode</h3>
+	            <h3 class="card-title">Every Two Montly Prcing Option</h3>
 	          </div>
 	          <div class="card-body">
 	          	<div class="table-responsive">
@@ -135,7 +135,7 @@
 			      			<tbody>
 				      			<tr>
 				      				<th style="width:50%">Two Month Subtotal:</th>
-				      				<td><%= @semester_registration.student.program.monthly_price%> ETB</td>
+				      				<td><%= @semester_registration.student.program.two_monthly_price%> ETB</td>
 				      			</tr>
 				      			<tr>
 				      				<th>Registration Fee:</th>
@@ -143,7 +143,7 @@
 				      			</tr>
 				      			<tr>
 				      				<th>Total:</th>
-				      				<td><b><%= @semester_registration.student.program.monthly_price + 550%> ETB</b></td>
+				      				<td><b><%= @semester_registration.student.program.two_monthly_price + 550%> ETB</b></td>
 				      			</tr>
 			      			</tbody>
 			      		</table>
@@ -154,7 +154,7 @@
       		<div class="col-12 col-md-3">
       			<div class="card card-primary">
 	          <div class="card-header">
-	            <h3 class="card-title">Select payment Mode</h3>
+	            <h3 class="card-title">Every Three Montly Prcing Option</h3>
 	          </div>
 	          <div class="card-body">
 	          	<div class="table-responsive">
@@ -181,7 +181,7 @@
       		<div class="col-12 col-md-3">
       			<div class="card card-primary">
 	          <div class="card-header">
-	            <h3 class="card-title">Select payment Mode</h3>
+	            <h3 class="card-title">Full Semester payment Mode</h3>
 	          </div>
 	          <div class="card-body">
 	          	<div class="table-responsive">
