--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -98,7 +98,7 @@
           </li> -->
           <li class="nav-item">
             <%= link_to destroy_student_session_path, method: :delete, class: "nav-link" do%>
-              <i class="nav-icon far fa-calendar-alt"></i>
+              <i class="nav-icon fas fa-sign-out-alt"></i>
               <p>
                 Logout
               </p>
