--- a/app/assets/stylesheets/active_admin.css.scss
+++ b/app/assets/stylesheets/active_admin.css.scss
@@ -15,7 +15,7 @@
 // Active Admin's got SASS!
 @import "active_admin/mixins";
 @import "active_admin/base";
-
+@import "active_admin_scoped_collection_actions";
 // Overriding any non-variable SASS must be done after the fact.
 // For example, to change the default status-tag color:
 //
