--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -27,7 +27,9 @@
           </div>
           <div class="card-body box-profile">
             <div class="text-center">
-              <%= image_tag(current_student.photo, size: '150x150', class: "profile-user-img img-fluid")%>
+
+              <%= image_tag(current_student.photo, size: '150x150', class: "profile-user-img img-fluid") if current_student.photo.attached?%>
+              <%= image_tag("blank-profile-picture-973460_640.png", size: '150x150', class: "profile-user-img img-fluid") if !current_student.photo.attached?%>
             </div>
 
             <h1 class="profile-username text-center"><b><%= current_student.name.full.upcase%></b></h1>
