--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -8,7 +8,8 @@
   <div class="sidebar">
     <div class="user-panel mt-3 pb-3 mb-3 d-flex">
     <div class="image">
-      <%= image_tag(current_student.photo, size: '160x160', class: "img-circle elevation-2", alt: "User Image")%>
+      <%= image_tag(current_student.photo, size: '160x160', class: "img-circle elevation-2", alt: "User Image") if current_student.photo.attached?%>
+      <%= image_tag("blank-profile-picture-973460_640.png", size: '160x160', class: "img-circle elevation-2") if !current_student.photo.attached?%>
     </div>
     <div class="info">
       <a href="#" class="d-block"><%= current_student.name.full%></a>
