--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -54,8 +54,8 @@
 								<strong>YIC Online.</strong><br>
 								Asmara Street, Addis Ababa<br>
 								, Ethiopia<br>
-								Phone: (+251) 944300026<br>
-								Email: info@bstcollege.edu.et
+								Phone: (+251) 907505050<br>
+								Email: info@yic.edu.et
 							</address>
 						</div>
 						<!-- /.col -->
