--- a/app/views/pages/_instruction.html.erb
+++ b/app/views/pages/_instruction.html.erb
@@ -134,7 +134,7 @@
           <!-- /.card-header -->
           <div class="card-body">  
             <p class="text-center">
-              <strong class="text-blue">Your payment has not been approved yet. Wait until the finance approves your account. Until then update your informations and documents.</strong>
+              <strong class="text-blue">Your payment has not been approved yet. Wait until finance approves your payment. Until then update your informations and documents.</strong>
             </p>
           </div>
           <!-- /.card-body -->
