--- a/app/views/payment_transactions/new.html.erb
+++ b/app/views/payment_transactions/new.html.erb
@@ -1,4 +1,4 @@
-<%provide(:title, "Payment MTransfer")%>
+<%provide(:title, "Payment Transfer")%>
 
 <section class="content-header">
   <div class="container-fluid">
