--- a/app/views/layouts/_registration_navbar.html.erb
+++ b/app/views/layouts/_registration_navbar.html.erb
@@ -15,7 +15,7 @@
           <%if current_page?(new_student_registration_path)%>
             <strong><%= link_to "Sign in", new_student_session_path, class: "nav-link"%> </strong> 
           <%elsif current_page?(new_student_session_path)%>
-            <strong><%= link_to "Register Now", new_student_registration_path, class: "nav-link"%> </strong> 
+            <strong><%= link_to "Register Now", requirements_path, class: "nav-link"%> </strong> 
           <%end%>
         </li>
         <li class="nav-item">
