--- a/app/views/students/registrations/new.html.erb
+++ b/app/views/students/registrations/new.html.erb
@@ -51,7 +51,7 @@
                     </button>
                   </div>
                 </div>
-                <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), multiple: true) do |f| %>
+                <%= simple_form_for(resource, as: resource_name,  url: registration_path(resource_name), :validate => true, multiple: true) do |f| %>
                   <div class="bs-stepper-content">
                     <!-- your steps content here -->
                     <div id="bi" class="content" role="tabpanel" aria-labelledby="bi-trigger">
@@ -97,7 +97,7 @@
                               <%= render 'basic', f: f %>
                             </div>
                             <div class="card-footer">
-                              <a class="btn btn-primary" onclick="stepper.next()">Continue</a>
+                              <a class="btn btn-primary" id= "submitw" onclick="stepper.next()">Continue</a>
                             </div>
                           </div>
                         </div>
@@ -285,4 +285,3 @@
     </div>
   </div>
 </div>
-
