--- a/app/views/pages/digital_iteracy_quiz.html.erb
+++ b/app/views/pages/digital_iteracy_quiz.html.erb
@@ -66,21 +66,24 @@
 	}*/
 
 	.slide{
-		position: absolute;
+		/*position: absolute;
 		left: 0px;
-		top: 0px;
+		top: 0px;*/
 		width: 100%;
-		z-index: 1;
+		/*z-index: 1;*/
+    display: none;
 		opacity: 0;
 		transition: opacity 0.5s;
 	}
 	.active-slide{
 		opacity: 1;
-		z-index: 2;
+    display: block;
+    overflow: hidden;
+		/*z-index: 2;*/
 	}
 	.quiz-container{
-		position: relative;
-		height: 300px;
+		/*position: relative;*/
+		/*height: 300px;*/
 		margin-top: 10px;
 	}
 
