--- a/app/views/payment_transactions/_form.html.erb
+++ b/app/views/payment_transactions/_form.html.erb
@@ -28,7 +28,7 @@
 								</div>
 							</div>
 							
-							<%= simple_form_for(@payment_transaction) do |f| %>
+							<%= simple_form_for(@payment_transaction, validate: true) do |f| %>
 							  <%= f.error_notification %>
 							  <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 							  
@@ -118,14 +118,14 @@
 														</h3>
 													</div>
 													<div class="card-body row">
-														<div class="col-12 col-md-6 form-group">
-												      <%= f.input :account_holder_fullname, input_html: { class: 'form-control', autofocus: true, autocomplete: "account_holder_fullname" },placeholder: "Account holder f ullname", required: true %>
+														<div class="col-12 col-md-12 form-group">
+												      <%= f.input :account_holder_fullname, validate: { presence: true, uniqueness: false } %>
 												    </div>
 												    <div class="col-12 col-md-6 form-group">
 												      <%= f.input :account_number, input_html: { class: 'form-control', autocomplete: "account_number" },placeholder: "Account number", required: true %>
 												    </div>
 												    <div class="col-12 col-md-6 form-group">
-												      <%= f.input :phone_number, input_html: { class: 'form-control', autocomplete: "phone_number" },placeholder: "Phone number", required: true %>
+												      <%= f.input :phone_number, input_html: { class: 'form-control', autocomplete: "phone_number" },placeholder: "Phone number", validate: { presence: true, uniqueness: false }, required: true %>
 												    </div>
 												    <div class="col-12 col-md-6 form-group">
 												      <%= f.input :transaction_reference, input_html: { class: 'form-control', autocomplete: "transaction_reference" },placeholder: "Transaction Reference", required: true %>
