--- a/app/views/students/registrations/edit.html.erb
+++ b/app/views/students/registrations/edit.html.erb
@@ -1,3 +1,6 @@
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bs-stepper/dist/css/bs-stepper.min.css" />
+<script src="https://cdn.jsdelivr.net/npm/bs-stepper/dist/js/bs-stepper.min.js"></script>
+
 <div>
   <div class="content">
     <div class="container-fluid">
@@ -276,3 +279,9 @@
   </div>
 </div>
 
+<script type="text/javascript">
+  // BS-Stepper Init
+  document.addEventListener('turbolinks:load', function () {
+    window.stepper = new Stepper(document.querySelector('.bs-stepper'))
+  })
+</script>
