--- a/app/views/students/registrations/new.html.erb
+++ b/app/views/students/registrations/new.html.erb
@@ -51,12 +51,11 @@
                     </button>
                   </div>
                 </div>
-                <%= simple_form_for(resource, as: resource_name,  url: registration_path(resource_name), :validate => true, multiple: true) do |f| %>
+                <%= simple_form_for(resource, as: resource_name,  url: registration_path(resource_name), multiple: true) do |f| %>
                   <div class="bs-stepper-content">
                     <!-- your steps content here -->
                     <div id="bi" class="content" role="tabpanel" aria-labelledby="bi-trigger">
                       <div class="row">
-                        
                         <div class="col-12 col-md-3">
                           <div class="row">
                             <div class="col-12">
