--- a/app/views/students/registrations/_admission.html.erb
+++ b/app/views/students/registrations/_admission.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-12 col-md-6 form-group">
-    <%= f.input :study_level, as: :select, :collection => ["Masters","Graduate"], input_html: {class: "form-control custom-select"}, :include_blank => false%>
+    <%= f.input :study_level, as: :select, :collection => [["Masters","graduate"]], input_html: {class: "form-control custom-select"}, :include_blank => false%>
   </div>
   <div class="col-12 col-md-6 form-group">
     <%= f.input :admission_type, as: :select, :collection => [["Online","online"]], input_html: {class: "form-control custom-select"}, :include_blank => false%>
